Application theme now uses android appcompats material theme
Updated pom.xml to reference android support libraries. Updated all
existing style resources to use the appcompat theme.

--- a/infohm/src/main/res/values/colors.xml
+++ b/infohm/src/main/res/values/colors.xml
@@ -17,4 +17,13 @@
 	<color name="button_flat_disabled_color">#42000000</color>
 	<color name="button_flat_pressed_color">#1e000000</color>
 
+	<!-- Activity colors. -->
+	<color name="activity_color">#ffeeeeee</color>
+	<color name="activity_primary_color">#ff01579b</color>
+	<color name="activity_secondary_color">#ff0277bd</color>
+	<color name="activity_accent_color">#ff0288d1</color>
+
+	<!-- Dialog colors. -->
+	<color name="dialog_divider_color">#14000000</color>
+
 </resources>
