--- a/infohm/src/main/res/values/attrs.xml
+++ b/infohm/src/main/res/values/attrs.xml
@@ -13,5 +13,7 @@
 	<attr name="dialogStyle" type="reference" />
 	<attr name="dialogTitleStyle" type="reference" />
 	<attr name="dialogContentStyle" type="reference" />
+	<attr name="dialogDividerStyle" type="reference" />
+	<attr name="dialogActionsStyle" type="reference" />
 
 </resources>
