--- a/infohm/src/main/res/values/attrs.xml
+++ b/infohm/src/main/res/values/attrs.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<!-- Text styleables. -->
+	<attr name="textAppearance" type="reference" />
+	<attr name="textAppearanceHeadline" type="reference" />
+	<attr name="textAppearanceTitle" type="reference" />
+	<attr name="textAppearanceSubheader" type="reference" />
+
 	<!-- Widget styleables. -->
 	<attr name="textViewStyle" type="reference" />
 	<attr name="textViewSecondaryStyle" type="reference" />
@@ -8,6 +14,8 @@
 	<attr name="buttonSecondaryStyle" type="reference" />
 	<attr name="buttonFlatStyle" type="reference" />
 	<attr name="buttonFlatSecondaryStyle" type="reference" />
+	<attr name="cardViewGuttersPadding" type="dimension" />
+	<attr name="cardViewContentPadding" type="dimension" />
 
 	<!-- Dialog styleables. -->
 	<attr name="dialogStyle" type="reference" />
