--- a/infohm/src/main/res/values/colors.xml
+++ b/infohm/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 	<color name="text_secondary_color">#89000000</color>
 	<color name="text_hint_color">#42000000</color>
 	<color name="text_disabled_color">#42000000</color>
+	<color name="text_highlight_color">#ff2196f3</color>
 
 	<!-- Button colors. -->
 	<color name="button_primary_color">#ddffffff</color>
