Extends base activity implementation to support toolbars and drawers
BaseActivity now finds a toolbar with a pre defined id and automatically
uses it as the default actionbar if present.
Added BaseDrawerActivity that finds a navigation drawer with a pre
defined id and configures it (toggle animation, back button behaviour).
Updated themes and styles for the navigation drawer.

--- a/infohm/src/main/res/values/attrs.xml
+++ b/infohm/src/main/res/values/attrs.xml
@@ -17,6 +17,10 @@
 	<attr name="cardViewGuttersPadding" type="dimension" />
 	<attr name="cardViewContentPadding" type="dimension" />
 
+	<!-- Drawer styleables. -->
+	<attr name="drawerStyle" type="reference" />
+	<attr name="drawerDividerStyle" type="reference" />
+
 	<!-- Dialog styleables. -->
 	<attr name="dialogStyle" type="reference" />
 	<attr name="dialogTitleStyle" type="reference" />
