--- a/infohm/src/main/res/values/colors.xml
+++ b/infohm/src/main/res/values/colors.xml
@@ -19,11 +19,17 @@
 	<color name="button_flat_pressed_color">#1e000000</color>
 
 	<!-- Activity colors. -->
-	<color name="activity_color">#ffeeeeee</color>
-	<color name="activity_primary_color">#ff01579b</color>
-	<color name="activity_secondary_color">#ff0277bd</color>
-	<color name="activity_accent_color">#ff0288d1</color>
-	<color name="activity_title_color">#ffffffff</color>
+	<color name="activity_background_color">#ffeeeeee</color>
+
+	<!-- Drawer clolors. -->
+	<color name="drawer_background_color">#ffeeeeee</color>
+	<color name="drawer_divider_color">#14000000</color>
+
+	<!-- ActionBar colors. -->
+	<color name="actionbar_primary_color">#ff01579b</color>
+	<color name="actionbar_secondary_color">#ff0277bd</color>
+	<color name="actionbar_accent_color">#ff0288d1</color>
+	<color name="actionbar_title_color">#ffffffff</color>
 
 	<!-- Dialog colors. -->
 	<color name="dialog_divider_color">#14000000</color>
