Adds authentication activity, fragment, controller and services
Added rough implementation of an authentication activity. The fragment
displays a basic ui containing two text fields and a submit button to
the user. The user can then insert his credentials and hit the submit
button to start the authentication process.
The result of the authentication process is not yet evaluated.

--- a/infohm/src/main/res/values/styles.xml
+++ b/infohm/src/main/res/values/styles.xml
@@ -87,6 +87,14 @@
 		<item name="searchIcon">@drawable/actionbar_search_lens</item>
 	</style>
 
+	<!-- Activity styles. -->
+	<style name="Activity" parent="@style/Widget" />
+
+	<style name="Activity.Content">
+		<item name="android:paddingLeft">16dp</item>
+		<item name="android:paddingRight">16dp</item>
+	</style>
+
 	<!-- Drawer styles. -->
 	<style name="Drawer" parent="@style/Widget">
 		<item name="android:layout_width">320dp</item>
