--- a/infohm/src/main/res/values/attrs.xml
+++ b/infohm/src/main/res/values/attrs.xml
@@ -17,6 +17,9 @@
 	<attr name="cardViewGuttersPadding" type="dimension" />
 	<attr name="cardViewContentPadding" type="dimension" />
 
+	<!-- Activity styleables. -->
+	<attr name="activityContent" type="reference" />
+
 	<!-- Drawer styleables. -->
 	<attr name="drawerStyle" type="reference" />
 	<attr name="drawerDividerStyle" type="reference" />
