--- a/infohm/src/main/res/values/attrs.xml
+++ b/infohm/src/main/res/values/attrs.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<!-- Dimension references. -->
+	<attr name="verticalSpaceBorder" type="dimension" />
+	<attr name="verticalSpaceKeyline" type="dimension" />
+	<attr name="cardViewGuttersPadding" type="dimension" />
+	<attr name="cardViewContentPadding" type="dimension" />
+	<attr name="listViewContentPadding" type="dimension" />
+
 	<!-- Text styleables. -->
 	<attr name="textAppearance" type="reference" />
 	<attr name="textAppearanceHeadline" type="reference" />
 	<attr name="textAppearanceTitle" type="reference" />
 	<attr name="textAppearanceSubheader" type="reference" />
+	<attr name="textAppearanceCaption" type="reference" />
 
 	<!-- Widget styleables. -->
 	<attr name="textViewStyle" type="reference" />
@@ -14,11 +22,6 @@
 	<attr name="buttonSecondaryStyle" type="reference" />
 	<attr name="buttonFlatStyle" type="reference" />
 	<attr name="buttonFlatSecondaryStyle" type="reference" />
-	<attr name="cardViewGuttersPadding" type="dimension" />
-	<attr name="cardViewContentPadding" type="dimension" />
-
-	<!-- Activity styleables. -->
-	<attr name="activityContent" type="reference" />
 
 	<!-- Drawer styleables. -->
 	<attr name="drawerStyle" type="reference" />
