--- a/infohm/src/main/res/values/styles.xml
+++ b/infohm/src/main/res/values/styles.xml
@@ -71,6 +71,15 @@
 		<item name="android:background">@drawable/button_flat_secondary_background_selector</item>
 	</style>
 
+	<style name="Widget.SlidingTab">
+		<item name="android:clickable">true</item>
+		<item name="android:padding">16dp</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">@dimen/text_caption_size</item>
+		<item name="android:textColor">@color/sliding_tab_color_selector</item>
+		<item name="android:textStyle">bold</item>
+	</style>
+
 	<!-- ActionBar styles. -->
 	<style name="ActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
 		<item name="titleTextStyle">@style/ActionBar.Title</item>
