--- a/infohm/src/main/res/layout/fragment_star_publisher.xml
+++ b/infohm/src/main/res/layout/fragment_star_publisher.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/fragment_start_publisher_list"
-	android:scrollbars="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:listitem="@layout/adapter_star_publisher" />
+	android:orientation="vertical">
+
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/fragment_start_publisher_list"
+		android:scrollbars="vertical"
+		android:layout_width="match_parent"
+		android:layout_height="200dp"
+		tools:listitem="@layout/adapter_star_publisher" />
+
+	<Button
+		android:id="@+id/fragment_start_publisher_submit"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/fragment_star_publisher_submit" />
+
+</LinearLayout>
