--- a/infohm/src/main/res/layout/activity_events.xml
+++ b/infohm/src/main/res/layout/activity_events.xml
@@ -20,11 +20,11 @@
 			android:layout_width="0dp"
 			android:layout_height="0dp" />
 
-		<fragment class="de.ladis.infohm.android.fragment.events.EventsFragment"
+		<fragment class="de.ladis.infohm.android.fragment.events.EventsPagerFragment"
 			android:id="@+id/activity_events_fragment_content"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			tools:layout="@layout/fragment_events" />
+			tools:layout="@layout/fragment_events_pager" />
 
 	</LinearLayout>
 
