--- a/infohm/src/main/res/values/attrs.xml
+++ b/infohm/src/main/res/values/attrs.xml
@@ -5,6 +5,7 @@
 	<attr name="slidingTabIndicatorColor" type="color" />
 
 	<!-- Dimension references. -->
+	<attr name="statusBarSize" type="dimension" />
 	<attr name="verticalSpaceBorder" type="dimension" />
 	<attr name="verticalSpaceKeyline" type="dimension" />
 	<attr name="cardViewGuttersPadding" type="dimension" />
@@ -30,6 +31,9 @@
 
 	<!-- Drawer styleables. -->
 	<attr name="drawerStyle" type="reference" />
+	<attr name="drawerHeaderStyle" type="reference" />
+	<attr name="drawerHeaderTitleStyle" type="reference" />
+	<attr name="drawerItemStyle" type="reference" />
 	<attr name="drawerDividerStyle" type="reference" />
 
 	<!-- Dialog styleables. -->
